--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,8 @@
 extends layout
 block head
-  p oops!
+  p 404 Not Found 
 block content
-  404 Not Found
+  p Hm... We can't find this page. Let's get you back on track:
 block foot
-  a(href="/")Go home
+  a(href="/") Home Page
+  a(href="/sign") Sign In Page
