--- a/views/sign.pug
+++ b/views/sign.pug
@@ -2,13 +2,13 @@ extends layout
 block head
   h1 Thanks for visiting. Please sign in below!
 block content
-  form
+  form(method="POST")
     label first name:
     input
     label last name:
     input
     label alias:
     input
-    input(type="submit" method="POST")
+    input(type="submit")
 block foot
   p thanks!
