quick fix for /welcome get request

--- a/views/sign.pug
+++ b/views/sign.pug
@@ -2,7 +2,7 @@ extends layout
 block head
   h1 Thanks for visiting. Please sign in below!
 block content
-  form(method="POST")
+  form(method="POST" action="/welcome")
     label first name:
     input
     label last name:
