add font and mount static path for public assets
Include Stylish as header font, Open Sans as body font. Plan to
build out "Guest" sign in and "Friend" sign in with different
privileges and access. Maybe use sessionStorage for guests and
MongoDB for storing friends?

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 block head
-  h1 Welcome!
+  h1 Rockwell Guestbook (head font test)
 block content
-  a(class="button" href="sign") Sign the guestbook :)
+  a(class="button" href="sign") Is this your first visit? (body font test)
 block foot
   p thanks!
