--- a/views/includes/registerFriend.pug
+++ b/views/includes/registerFriend.pug
@@ -1,12 +1,12 @@
 block registration-form
-  form(action="/sign" method="post")
+  form(method="post" action="/sign")
     label(for="first_name") first name:
-    input(id="first_name" type="text")
+    input(name="first_name" type="text" id="first_name")
     label(for="last_name") last name:
-    input(id="last_name" type="text")
+    input(name="last_name" type="text" id="last_name")
     label(for="username") New username:
-    input(id="username" type="text")
+    input(name="username" type="text" id="username")
     label(for="password") New password:
-    input(id="password" type="text")
-    input(type="submit" value="OK")
+    input(name="password" type="password" id="password")
+    input(type="submit")
   a(href="/guest") Sign in as guest
