--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,3 @@
 extends layout
 block content
-  a(class="button" href="sign") Is this your first visit? (body font test)
+  a(class="button" href="sign") First Sign In
