Create login view

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,4 @@
 extends layout
 block content
-  a(class="button" href="sign") First Sign In
+  a(class="button" href="sign")   Register
+  a(class="button" href="login")  Log In
