Uninstall passport and update login view

--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -6,3 +6,4 @@ block login-form
     input(name="username" type="text" id="username")
     label(for="last_name") Password:
     input(name="password" type="text" id="password")
+    input(type="submit")  
