--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,4 @@
 extends layout
 block content
-  a(class="button" href="sign")   Register
-  a(class="button" href="login")  Log In
+  a(class="button" href="register")   Register
+  a(class="button" href="login")      Log In
