add login route, create authController

--- a/views/includes/registerFriend.pug
+++ b/views/includes/registerFriend.pug
@@ -1,5 +1,5 @@
 block registration-form
-  form(method="post" action="/sign")
+  form(method="post" action="/register")
     label(for="first_name") first name:
     input(name="first_name" type="text" id="first_name")
     label(for="last_name") last name:
