--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -5,5 +5,5 @@ block login-form
     label(for="username") Username:
     input(name="username" type="text" id="username")
     label(for="last_name") Password:
-    input(name="password" type="text" id="password")
+    input(name="password" type="password" id="password")
     input(type="submit")  
