Update login page with correct authentication messages
On successful auth, user is sent to '/welcome'
On unsuccessful auth, user is return to '/login' and notified
of the error in their credentials.

--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -6,4 +6,6 @@ block login-form
     input(name="username" type="text" id="username")
     label(for="last_name") Password:
     input(name="password" type="password" id="password")
-    input(type="submit")  
+    input(type="submit")
+    br
+    pre=JSON.stringify(result)  
