--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -8,4 +8,5 @@ block login-form
     input(name="password" type="password" id="password")
     input(type="submit")
     br
-    pre=JSON.stringify(result)  
+    //- pre=JSON.stringify(result);
+  p If this is your first visit, please <a href="/register">register here</a>
