--- a/views/includes/menu.pug
+++ b/views/includes/menu.pug
@@ -1,3 +1,12 @@
 block menu
+  - let user;
+  - user=username;
   .menu-wrapper
     h1 Rockwell Guestbook
+    unless user
+      a(class="button" href="login")      Log In
+    if user 
+      a(class="button" href="feed") Check In
+      form(method="post" action="/logout")
+        input(type="hidden")
+        button(type="submit") Log Out
