--- a/views/includes/foot.pug
+++ b/views/includes/foot.pug
@@ -1,7 +1,3 @@
 block foot
   .footer-wrap
-    ul
-      li 
-        a(href="/") Home
-      li
-        a(href="/about") About
+    p Sample footer content :) 
