--- a/views/includes/menu.pug
+++ b/views/includes/menu.pug
@@ -1,12 +1,14 @@
 block menu
   - let user;
   - user=username;
-  .menu-wrapper
-    h1 Rockwell Guestbook
+  .header
+    a(class="header__logo" href="/")
+      h1 Rockwell Guestbook
     unless user
-      a(class="button" href="login")      Log In
+      div(class="header__button")
+        a(class="header__button_login" href="login")      Log In
     if user 
-      a(class="button" href="feed") Check In
+      a(class="header__button" href="feed") Check In
       form(method="post" action="/logout")
         input(type="hidden")
         button(type="submit") Log Out
