--- a/views/register.pug
+++ b/views/register.pug
@@ -1,5 +1,6 @@
 extends layout
 block header
-  h1 Rockwell Guestbook
+  a(class="header__logo" href="/")
+    h1 Rockwell Guestbook
 block content
   include includes/registerFriend.pug
