--- a/views/register.pug
+++ b/views/register.pug
@@ -1,6 +1,3 @@
 extends layout
-block header
-  a(class="header__logo" href="/")
-    h1 Rockwell Guestbook
-block content
+block main
   include includes/registerFriend.pug
