--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -2,5 +2,7 @@
 
 head
   title #{title}
+  meta(name="viewport" content="width=device-width, initial-scale=1")
   link(href="https://fonts.googleapis.com/css?family=Open+Sans|Stylish|Syncopate" rel="stylesheet")
   link(href="static/stylesheets/index.css" rel="stylesheet")
+  link(href="static/assets/favicon.png" type="image/png" rel="shortcut icon")
