--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,9 @@ doctype html
 html
   include includes/head.pug
   body
-    block header
-      include includes/menu.pug
-    block content
-    block foot  
+    block nav
+      include includes/nav.pug
+    block main
+      block main-content
+    block footer  
       include includes/foot.pug
