--- a/views/register.pug
+++ b/views/register.pug
@@ -1,3 +1,6 @@
 extends layout
 block main
-  include includes/registerFriend.pug
+  unless (errors)
+    include includes/registerFriend.pug
+  if (errors)
+    include includes/registerRetry.pug
