Fix registerFriend bugs

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,6 +3,6 @@
 head
   title #{title}
   meta(name="viewport" content="width=device-width, initial-scale=1")
-  link(href="https://fonts.googleapis.com/css?family=Open+Sans|Stylish|Syncopate" rel="stylesheet")
-  link(href="static/stylesheets/index.css" rel="stylesheet")
-  link(href="static/assets/favicon.png" type="image/png" rel="shortcut icon")
+  link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Stylish|Syncopate")
+  link(rel="stylesheet" href="static/stylesheets/index.css")
+  link(rel="shortcut icon" href="static/assets/favicon.png" type="image/png")
