--- a/views/includes/registerFriend.pug
+++ b/views/includes/registerFriend.pug
@@ -3,7 +3,7 @@ block registration-form
     form(method="post" action="/register")
       .field
         label(class="label" for="formUserName") New username:
-        input(class="input" name="formUserName" type="text" id="formUserName" placeholder='Choose a username')
+        input(class="input" name="formUserName" type="text" id="formUserName" placeholder="Choose a username")
       .field
         label(class="label" for="email") Email:
         input(class="input" name="email" type="text" id="email" placeholder='Enter your email')
