--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,8 @@ html
   body
     block nav
       include includes/nav.pug
-    block main
-      block main-content
+    .container
+      block main
+        block main-content
     block footer  
       include includes/foot.pug
