--- a/views/feed.pug
+++ b/views/feed.pug
@@ -1,9 +1,10 @@
 extends layout
-block main
-  p Wi-Fi Information:
-  ul
-    li network: Fangorn
-    li password: peacelovevelo
-  br
-  br
-  pre=result
+block main-content
+  .container
+    p Wi-Fi Information:
+    ul
+      li network: Fangorn
+      li password: peacelovevelo
+    br
+    br
+    pre=result
