--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   include includes/head.pug
   body
+    - let user = username;
     block nav
       include includes/nav.pug
     .container
