Update feed view to render with recent guestbook entries

--- a/views/feed.pug
+++ b/views/feed.pug
@@ -19,6 +19,7 @@ block main-content
     br
   if (entries)
     each entry in entries
-      p=entry.username
-      p=entry.content
+      div(class="box")
+        p=entry.username
+        p=entry.content
       
