--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -4,5 +4,5 @@ head
   title #{title}
   meta(name="viewport" content="width=device-width, initial-scale=1")
   link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Stylish|Syncopate")
-  link(rel="stylesheet" href="static/stylesheets/index.css")
-  link(rel="shortcut icon" href="static/assets/favicon.png" type="image/png")
+  link(rel="stylesheet" href="/static/stylesheets/index.css")
+  link(rel="shortcut icon" href="/static/assets/favicon.png" type="image/png")
