--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -3,11 +3,11 @@ block nav
     .container
       .navbar-brand
         a(class="navbar-item" href="/")
-          img(src="./static/assets/rockwellguest-logo-nav-brand.png")
+          img(src="/static/assets/rockwellguest-logo-nav-brand.png")
       .navbar-menu
         unless user
           .navbar-item
             a(class="navbar-item" href="/login") Log In
         if user
-          a(class="navbar-item" href="feed") Check In
-          a(class="navbar-item" href="logout") Log Out
+          a(class="navbar-item" href="/feed") Check In
+          a(class="navbar-item" href="/logout") Log Out
