Unshift guestbook entries, clean up feed routing (:username in url)

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,3 +1,5 @@
-.container
-  p Looks like you're lost.
-  a(href="/") Go Home
+extends layout
+block main-content
+  .container
+    p Looks like you're lost.
+    a(href="/") Go Home
