--- a/views/feed.pug
+++ b/views/feed.pug
@@ -17,8 +17,8 @@ block main-content
       li password: peacelovevelo
     br
     br
-  if (guestbook.entries)
-    each entry in guestbook.entries
+  if (guestbook)
+    each entry in guestbook
       div(class="box")
         p=entry.username
         p=entry.content
