Implement registration success/failure, feed/:username routing
feed/:username routing working by creating a local variable from the result of authController.verifyLogin

--- a/views/feed.pug
+++ b/views/feed.pug
@@ -19,8 +19,11 @@ block main-content
     br
   if (guestbook)
     each entry in guestbook
-      div(class="box")
-        p=entry.username
-        p=entry.content
-        p=entry.date
+      article(class="media")
+        .media-content
+          .content
+            p
+              strong=entry.username
+            p=entry.content
+            p=entry.date
       
