--- a/views/error.pug
+++ b/views/error.pug
@@ -1,5 +1,12 @@
 extends layout
 block main-content
   .container
-    p Looks like you're lost.
+    br
+    p &#x1F635; oh no! &#x1F635; 
+    br 
+    p There's been an error.
+    br
     a(href="/") Go Home
+    br
+    br
+    
