--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -2,6 +2,7 @@
 
 head
   title #{title}
+  meta(content-type="text/html" charset="UTF-8")
   meta(name="viewport" content="width=device-width, initial-scale=1")
   link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Stylish|Syncopate")
   link(rel="stylesheet" href="/static/stylesheets/index.css")
