--- a/views/includes/registerFriend.pug
+++ b/views/includes/registerFriend.pug
@@ -6,9 +6,13 @@ block registration-form
         input(class="input" name="formUserName" type="text" id="formUserName" 
         value=renderUserName ? renderUserName : "" placeholder="Choose a username")
       .field
-        label(class="label" for="email") Email:
-        input(class="input" name="email" type="text" id="email" 
-        value=renderEmail ? renderEmail : "" placeholder='Enter your email')
+        label(class="label" for="formFirstName") First Name:
+        input(class="input" name="formFirstName" type="text" id="firstName" 
+        value=renderFirstName ? renderFirstName : "" placeholder='Enter your first name')
+      .field
+        label(class="label" for="formLastName") Last Name:
+        input(class="input" name="formLastName" type="text" id="lastName" 
+        value=renderLastName ? renderLastName : "" placeholder='Enter your last name')
       .field
         label(class="label" for="password") New password:
         input(class="input" name="password" type="password" id="password")
