Update feed view with columns of tiles, try to fix entry rendering on feed :/

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -8429,7 +8429,7 @@ label.panel-block:hover {
 }
 
 .footer {
-  background-color: #fafafa;
+  background-color: grey;
   padding: 3rem 1.5rem 6rem;
 }
 
