--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,5 +1,5 @@
 $body-family: Open Sans;
 $family-sans-serif: Open Sans, sans-serif;
-
+$footer-background-color: grey;
 @charset "utf-8";
 @import "../../node_modules/bulma/bulma.sass";
