--- a/views/feed.pug
+++ b/views/feed.pug
@@ -1,29 +1,32 @@
 extends layout
 block main-content
   .container
-    .guestbook
-      h1 Sign the Guestbook
-        form(method="post" action="/feed")
-          .field
-            lable(class="label" for="newEntry")
-            input(class="input" name="newEntry" type="text" id="newEntry"
-            placeholder="Sign the Guestbook!")
-          .control
-            button(class="button is-primary" type="submit") Sign
-    .entries
-    p Wi-Fi Information:
-    ul
-      li network: Fangorn
-      li password: peacelovevelo
-    br
-    br
-  if (guestbook)
-    each entry in guestbook
-      article(class="media")
-        .media-content
-          .content
-            p
-              strong=entry.username
-            p=entry.content
-            p=entry.date
+    div(class="tile is-ancestor")
+      div(class="tile is-parent is-vertical")
+        div(class="tile is-child")
+          .guestbook
+            h1 Sign the Guestbook
+              form(method="post" action="/feed")
+                .field
+                  lable(class="label" for="newEntry")
+                  input(class="input" name="newEntry" type="text" id="newEntry"
+                  placeholder="Sign the Guestbook!")
+                .control
+                  button(class="button is-primary" type="submit") Sign
+        div(class="tile is-child")    
+          .entries
+            each entry in renderEntries
+              article(class="media")
+                .media-content
+                  .content
+                    p
+                      strong=entry.username
+                    p=entry.content
+                    p=entry.date
+      div(class="tile is-parent")
+        p Wi-Fi Information:
+        ul
+          li network: Fangorn
+          li password: peacelovevelo
+
       
