Implement sessionController.getActiveUsers() for use while rendering /feed

--- a/views/feed.pug
+++ b/views/feed.pug
@@ -3,30 +3,9 @@ block main-content
   .container
     div(class="tile is-ancestor")
       div(class="tile is-parent is-vertical")
-        div(class="tile is-child")
-          .guestbook
-            h1 Sign the Guestbook
-              form(method="post" action="/feed")
-                .field
-                  lable(class="label" for="newEntry")
-                  input(class="input" name="newEntry" type="text" id="newEntry"
-                  placeholder="Sign the Guestbook!")
-                .control
-                  button(class="button is-primary" type="submit") Sign
-        div(class="tile is-child")    
-          .entries
-            each entry in renderEntries
-              article(class="media")
-                .media-content
-                  .content
-                    p
-                      strong=entry.username
-                    p=entry.content
-                    p=entry.date
+        include includes/guestbook.pug
       div(class="tile is-parent")
-        p Wi-Fi Information:
-        ul
-          li network: Fangorn
-          li password: peacelovevelo
+        include includes/activeUsers.pug
+        include includes/networkInfo.pug
 
       
