Implement login in navbar, responsive burger for mobile
Login form now renders in navbar on desktop, and using static/lib/navbarBurger.js on mobile will appear in the menu dropdown on mobile

--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -3,3 +3,4 @@ $family-sans-serif: Open Sans, sans-serif;
 $footer-background-color: grey;
 @charset "utf-8";
 @import "../../node_modules/bulma/bulma.sass";
+@import "./modules/nav.scss"; 
