--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,11 +1,17 @@
 block nav
-  nav(id="navbar" class="navbar has-shadow is-spaced")
+  nav(id="navbar" class="navbar has-shadow")
     if user
       .navbar-brand
         a(class="navbar-item" href="/feed")
           img(src="/static/assets/rockwellguest-logo-nav-brand.png")
-      .navbar-item
-        a(class="navbar-item" href="/logout") Log Out
+        a(role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu")
+            span(aria-hidden="true")
+            span(aria-hidden="true")
+            span(aria-hidden="true")
+      .navbar-start
+      .navbar-end
+        div(class="navbar-menu" id="navMenu")
+          a(class="navbar-item" href="/logout") Log Out
     unless user
       .navbar-brand
         a(class="navbar-item" href="/")
@@ -27,3 +33,4 @@ block nav
                 input(class="input" name="password" type="password" id="password" placeholder="Password")
               .control
                 button(class="button is-primary" type="submit") Submit
+  script(type="text/javascript" src="../static/lib/navbarBurger.js")
