--- a/views/includes/activeUsers.pug
+++ b/views/includes/activeUsers.pug
@@ -1,4 +1,5 @@
 div(class="tile is-child")
+  h2(class="subtitle") Who's visiting right now?
   .users
     each user in renderUsers
       p=user.username
