--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,11 @@
 doctype html
-html
+html(class="has-navbar-fixed-top")
   include includes/head.pug
   body
     - let user = username;
     block nav
       include includes/nav.pug
-    .container
+    main(class="bd-main")
       block main
         block main-content
     block footer  
