--- a/views/includes/foot.pug
+++ b/views/includes/foot.pug
@@ -1,3 +1,5 @@
 block foot
-  div(class="footer")
-      p Sample footer content :) 
+  footer(class="footer")
+    div(class="content has-text-centered")
+      p #[strong Guestbook] by 
+        a(href="https://github.com/dhammitt") Derek Hammitt
