--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -27,10 +27,10 @@ block nav
             form(class="login-form" method="post" action="/login")
               .field
                 // label(class="label" for="username") Username:
-                input(class="input navbarUsername" name="username" type="text" id="username" placeholder="Username")
+                input(class="input navbarUsername" name="username" type="text" id="navUsername" placeholder="Username")
               .field
                 // label(class="label" for="password") Password:
-                input(class="input navbarPassword" name="password" type="password" id="password" placeholder="Password")
+                input(class="input navbarPassword" name="password" type="password" id="navPassword" placeholder="Password")
               .control
                 button(class="button is-primary" type="submit") Submit
   script(type="text/javascript" src="../static/lib/navbarBurger.js")
