--- a/public/stylesheets/modules/nav.css
+++ b/public/stylesheets/modules/nav.css
@@ -1,9 +1,9 @@
-.login-form {
+.nav-login--form {
   display: inline-flex;
   padding: 8px 0px 0px 0px;
 }
 
-.login-form .field, .control {
+.login-form .field, .nav-login--control {
   margin-left: 0.5rem;
 }
 
