--- a/views/includes/networkInfo.pug
+++ b/views/includes/networkInfo.pug
@@ -4,7 +4,7 @@ div(class="tile is-child")
     div(class="modal-background" data-target="wifiModal")
     div(class="modal-card")
       header(class="modal-card-head")
-        p Wi-Fi Info
+        p(class="modal-title") Wi-Fi Info
         button(class="delete wifiModalClose" aria-label="close" data-target="wifiModal")
       section(class="modal-card-body")
         p Wi-Fi Information: 
