--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -2,3 +2,6 @@ $body-family: Open Sans;
 $family-sans-serif: Open Sans, sans-serif;
 @import "../../node_modules/bulma/bulma.sass";
 @import "./modules/nav.scss";
+@import "./modules/index.scss";
+@import "./modules/modals.scss";
+@import "./modules/feed.scss"
