--- a/app/sass/modules/nav.scss
+++ b/app/sass/modules/nav.scss
@@ -1,7 +1,7 @@
-.login-form {
+.nav-login--form {
   display: inline-flex;
   padding: 8px 0px 0px 0px;
 }
-.login-form .field, .control {
+.login-form .field, .nav-login--control {
   margin-left: .50rem;
 }
