--- a/views/register.pug
+++ b/views/register.pug
@@ -1,11 +1,12 @@
 extends layout
 block main
   unless outcome
-    include includes/registerFriend.pug
     if (errors)
       each error in errors
         p= error
+    include includes/registerFriend.pug
   if outcome
-    p Your registration was successful!
-    br
-    p You may now log in with your new credentials.
+    div(class="hero is-fullheight")
+      .hero-body
+        h1(class="hero-head title") Your registration was successful!
+        h2(class="hero-body subtitle") You can use your new login credentials to sign in.
