--- a/views/includes/guestbook.pug
+++ b/views/includes/guestbook.pug
@@ -17,11 +17,22 @@ div(class="tile is-child")
         div(class="media-content guestbook-entry")
           div(class="content" id=entry._id)
             p=entry.content
-            p= new Date(entry.date)
+            - let date = new Date(entry.date)
+            - date = Date.prototype.toLocaleString.call(date)
+            p=date
+            nav(class="level is-mobile")
+              button(class="button is-primary entry-reply-submit") Reply
+              if entry.username === username
+                a(class="delete entry-delete") Delete
             each reply in entry.replies
               article(class="media")
+                figure(class="media-left")
+                  strong=reply.author
                 div(class="media-content entry-reply")
-                  p=reply
-            button(class="button is-primary entry-reply-submit") Reply
+                  div(class="content")
+                    p=reply.content
+                    - replyDate = Date.prototype.toLocaleString.call(reply.createdAt)
+                    p=replyDate
+
 
   script(type="text/javascript" src="../static/lib/reply.js")
