--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -7,3 +7,5 @@ head
   link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Stylish|Syncopate")
   link(rel="stylesheet" href="/static/stylesheets/index.css")
   link(rel="shortcut icon" href="/static/assets/favicon.png" type="image/png")
+  link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous")
+
