Fixed reply and delete functionality
Because both reply and delete scripts were running window.onload, the first of these scripts was being cancelled out by the second. To fix this, move reply.js and deleteEntry.js to /lib/modules and import them to a single feed.js component that runs both scripts in a single function at window.onload

--- a/views/includes/guestbook.pug
+++ b/views/includes/guestbook.pug
@@ -44,7 +44,4 @@ div(class="tile is-child")
                               i(class="far fa-trash-alt entry-delete-icon")
                           .level-right  
                             small=replyDate
-
-
-script(type="text/javascript" src="../static/lib/reply.js")
-script(type="text/javascript" src="../static/lib/deleteEntry.js")
+script(type="module" src="../static/lib/feed.js")
