--- a/views/includes/registerFriend.pug
+++ b/views/includes/registerFriend.pug
@@ -2,21 +2,22 @@ block registration-form
   form(method="post" action="/register")
     .field
       label(class="label" for="formUserName") New username:
-      input(class="input" name="formUserName" type="text" id="formUserName" 
-      value=renderUserName ? renderUserName : "" placeholder="Choose a username")
+      input(class="input" name="formUserName" type="text" id="formUsername" 
+      value=renderUserName ? renderUserName : "" placeholder="Choose a username" minlength=3 required)
     .field
       label(class="label" for="formFirstName") First Name:
       input(class="input" name="formFirstName" type="text" id="firstName" 
-      value=renderFirstName ? renderFirstName : "" placeholder='Enter your first name')
+      value=renderFirstName ? renderFirstName : "" placeholder='Enter your first name' required)
     .field
       label(class="label" for="formLastName") Last Name:
       input(class="input" name="formLastName" type="text" id="lastName" 
-      value=renderLastName ? renderLastName : "" placeholder='Enter your last name')
+      value=renderLastName ? renderLastName : "" placeholder='Enter your last name' required)
     .field
       label(class="label" for="password") New password:
-      input(class="input" name="password" type="password" id="password")
+      input(class="input" name="password" type="password" id="password" minlength=5 required)
     .field
       label(class="label" for="passConf") Confirm password:
-      input(class="input" name="passConf" type="password" id="passConf")
+      input(class="input" name="passConf" type="password" id="passConf" required)
     .control
       button(class="button is-primary" type="submit") Submit
+script(type="text/javascript" src="../static/lib/register.js")
