--- a/views/feed.pug
+++ b/views/feed.pug
@@ -1,14 +1,15 @@
 extends layout
 block main-content
   section(class="hero is-fullheight")
-    .hero-body
+    .hero-head
       .container
         div(class="tile is-ancestor")
           div(class="tile is-parent is-vertical")
-            include includes/guestbook.pug
-          div(class="tile is-parent is-vertical")
             include includes/networkInfo.pug
             include includes/activeUsers.pug
+          div(class="tile is-parent is-vertical")
+            include includes/guestbook.pug
+
             
 
       
