--- a/views/includes/login.pug
+++ b/views/includes/login.pug
@@ -13,7 +13,7 @@ block login-form
         .control
           button(class="button is-primary" type="submit") Submit
       br
-      if result === 'Not Authenticated'
+      if result === 'NOT_AUTHENTICATED'
         div(class="notification is-warning")
           p Incorrect Username or Password!
     section(class="section")
